# hospital-bot

Hospital/src/hospital_robot_bringup/: package.xml  setup.cfg  setup.py
Hospital/src/hospital_robot_bringup/hospital_robot_bringup/: startup_cmd_vel_test.py
Hospital/src/hospital_robot_bringup/launch/: bringup.launch.py  simulation.launch.py
Hospital/src/hospital_robot_bringup/resource/: hospital_robot_bringup
Hospital/src/hospital_robot_bringup/rviz/: hospital.rviz
Hospital/src/hospital_robot_bringup/worlds/: hospital.world
Hospital/src/hospital_robot_control/: package.xml  setup.cfg  setup.py
Hospital/src/hospital_robot_control/config/: control_params.yaml
Hospital/src/hospital_robot_control/hospital_robot_control/: control_node.py
Hospital/src/hospital_robot_control/launch/: control.launch.py
Hospital/src/hospital_robot_control/resource/: hospital_robot_control
Hospital/src/hospital_robot_delivery/hospital_robot_delivery.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
Hospital/src/hospital_robot_delivery/prefix_override/: sitecustomize.py
Hospital/src/hospital_robot_description/: package.xml  setup.py
Hospital/src/hospital_robot_description/launch/: display.launch.py
Hospital/src/hospital_robot_description/resource/: hospital_robot_description
Hospital/src/hospital_robot_description/urdf/: base.xacro  lidar.xacro  robot.urdf.xacro  wheels.xacro
Hospital/src/hospital_robot_navigation/: package.xml  setup.py
Hospital/src/hospital_robot_navigation/config/: controller.yaml  map.yaml  nav2_params.yaml  planner.yaml
Hospital/src/hospital_robot_navigation/launch/: navigation.launch.py
Hospital/src/hospital_robot_navigation/maps/: hospital_map.pgm
Hospital/src/hospital_robot_navigation/resource/: hospital_robot_navigation
Hospital/src/hospital_robot_sensors/: package.xml  setup.cfg  setup.py
Hospital/src/hospital_robot_sensors/config/: sensor_params.yaml
Hospital/src/hospital_robot_sensors/hospital_robot_sensors/: sensor_node.py
hospital_robot_delivery/: colcon_command_prefix_setup_py.sh.env
hospital_robot_delivery/hospital_robot_delivery.egg-info/: PKG-INFO
(+5 files in other folders)
