<?xml version="1.0"?>
<package format="3">
  <name>hospital_robot_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for complete hospital robot system.</description>
  <maintainer email="robotics@example.com">Hospital Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>hospital_robot_description</exec_depend>
  <exec_depend>hospital_robot_sensors</exec_depend>
  <exec_depend>hospital_robot_navigation</exec_depend>
  <exec_depend>hospital_robot_control</exec_depend>
  <exec_depend>hospital_robot_delivery</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
